pythonweb_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pythonweb-service
spec:
  selector:
    app: pythonweb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
